--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
-h1, p {
-  font-family: Lato;
+.title-main {
+  text-align: center;
+  font-family: 'Do Hyeon', sans-serif;
+  font-size: 40px;
+
+}
+.search-top {
+  text-align: right;
+  
+
 }
